feat(tiles): runtime atlas + textured TileBatch; integrate with chunked World and camera

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_FIND_PACKAGE_PREFER_CONFIG ON)
 
 find_package(SFML COMPONENTS System Window Graphics Audio CONFIG REQUIRED)
 
-# --- engine_render (for Camera) ---
+# — engine_render (camera, input)
 add_library(engine_render
   engine/render/Camera.cpp
   engine/render/Camera.hpp
@@ -16,36 +16,37 @@ add_library(engine_render
 target_link_libraries(engine_render PUBLIC SFML::Graphics SFML::Window SFML::System)
 target_include_directories(engine_render PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_executable(wet_terrarium src/main.cpp)
-target_link_libraries(wet_terrarium PRIVATE engine_render SFML::Audio)
-
-# --- engine_tile ---
+# — engine_tile (tiles, atlas, batch)
 add_library(engine_tile
   engine/tile/TileTypes.hpp
+  engine/tile/Coords.hpp
   engine/tile/Chunk.hpp
-  engine/tile/TileBatch.cpp
+  engine/tile/TileAtlas.hpp
   engine/tile/TileBatch.hpp
+  engine/tile/TileBatch.cpp
 )
 target_link_libraries(engine_tile PUBLIC SFML::Graphics)
 target_include_directories(engine_tile PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-# Link it to the app
-target_link_libraries(wet_terrarium PRIVATE engine_render engine_tile)
-
-# --- engine_world ---
+# — engine_world (world + lazy chunks)
 add_library(engine_world
-  engine/world/World.cpp
   engine/world/World.hpp
-  engine/tile/Coords.hpp        # header-only but include for IDEs
+  engine/world/World.cpp
 )
 target_link_libraries(engine_world PUBLIC engine_tile SFML::Graphics)
 target_include_directories(engine_world PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-# App links all
-target_link_libraries(wet_terrarium PRIVATE engine_render engine_tile engine_world)
+# — main executable
+add_executable(wet_terrarium
+  src/main.cpp
+)
+target_link_libraries(wet_terrarium PRIVATE
+  engine_render
+  engine_tile
+  engine_world
+)
 
-
-# rpath for vcpkg dylibs on macOS
+# macOS: allow runtime linking to vcpkg dylibs
 set(CMAKE_BUILD_WITH_INSTALL_RPATH YES)
 if(EXISTS "${CMAKE_BINARY_DIR}/vcpkg_installed/arm64-osx/lib")
   set(CMAKE_INSTALL_RPATH "${CMAKE_BINARY_DIR}/vcpkg_installed/arm64-osx/lib")
