feat(lighting): complete dynamic lighting system with day/night cycle
- Implement sophisticated lighting system with light propagation
- Add light source tiles (Torch, Lantern) with emission values
- Create realistic day/night cycle with smooth sky color transitions
- Add 3-pass lighting calculation: base → sunlight → light sources
- Implement underground lighting independence from surface shadows
- Add comprehensive tile selection system (keys 1-6)
- Integrate lighting with chunked world management
- Optimize lighting performance with depth limits and flood-fill BFS
- Add beautiful sky gradients: night (purple) → dawn → day (blue) → dusk (orange)
- Configure 52-second day/night cycle with extended transition periods

Technical improvements:
- LightMap class with efficient spatial light calculation
- TileBatch integration with per-vertex lighting colors
- Chunk-level lighting dirty tracking for performance
- World-wide ambient light updates with consistency guarantees
- Memory-efficient light propagation with visited tracking
- Surface vs underground lighting logic for realism

Visual enhancements:
- Natural tree shadows limited to surface layers
- Glowing light source tile rendering
- Smooth lighting gradients from 20% to 100% brightness
- Dynamic sky colors matching lighting conditions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,8 @@ add_library(engine_tile
   engine/tile/TileAtlas.hpp
   engine/tile/TileBatch.hpp
   engine/tile/TileBatch.cpp
+  engine/tile/LightMap.hpp
+  engine/tile/LightMap.cpp
   engine/noise/ValueNoise.hpp 
 )
 target_link_libraries(engine_tile PUBLIC SFML::Graphics)
